# cubrid-benchmark

./: .gitignore  AGENTS.md  BASELINE.md  BENCHFORGE_RESULTS.md  BENCHMARK_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DRIVER_COMPARISON.md  LICENSE  Makefile  PRD.md  README.md  REPRODUCIBILITY.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  pyproject.toml
docker/: compose.yml
docs/: METHODOLOGY.md
go/: bench_cubrid_extended_test.go  bench_cubrid_go_test.go  bench_mysql_extended_test.go  bench_mysql_test.go  bench_ops_extended_test.go  bench_ops_test.go  bench_tier0_cubrid_test.go  bench_tier0_mysql_test.go  go.mod  go.sum  helpers_test.go
python/: bench_pycubrid.py  bench_pycubrid_extended.py  bench_pymysql.py  bench_pymysql_extended.py  bench_sqlalchemy_cubrid.py  bench_sqlalchemy_mysql.py  bench_tier0_cubrid.py  bench_tier0_mysql.py  conftest.py  requirements.txt
results/: python_tier1.json  typescript_tier1_mysql.json
rust/: Cargo.toml
rust/benches/: bench_cubrid.rs
rust/src/: lib.rs
scenarios/: bulk_insert_batch.yaml  connection_lifecycle.yaml  full_scan.yaml  full_scan_python.yaml  mixed_crud.yaml  mixed_crud_python.yaml  point_select.yaml  point_select_python.yaml
schema/: canonical_cubrid.sql  canonical_mysql.sql  cubrid_init.sql  mysql_init.sql  seed.sql
schemas/: benchforge_v2.json
scripts/: aggregate_multitrial.py  aggregate_native_ping_hotpath.py  apply_schema.py  collect_metrics.py  compare_runs.py  emit_benchforge_v2.py  gap_to_issue.py  generate_comparison_charts.py  generate_manifest.py  generate_report.py  generate_run_yaml.py  pr_comment.py  (+6 more)
(+170 files in other folders)
